--- a/frontend/app/views/shared/_component_toolbar.html.erb
+++ b/frontend/app/views/shared/_component_toolbar.html.erb
@@ -1,6 +1,5 @@
 <%
    suppressible = true if suppressible.nil?
-   supports_events = true if supports_events.nil?
 %>
 <div class="row-fluid">
   <div class="span12">
@@ -26,7 +25,7 @@
       <div class="btn-toolbar pull-right">
         <div class="btn-group">
 
-          <% if user_can?('update_archival_record') && supports_events && !record.suppressed %>
+          <% if user_can?('update_archival_record') && ((suppressible && !record.suppressed) || !suppressible )  %>
             <%= render :partial => "shared/event_dropdown", :locals => {:record => record} %>
           <% end %>
 
