--- a/frontend/app/views/preferences/edit.html.erb
+++ b/frontend/app/views/preferences/edit.html.erb
@@ -1,9 +1,34 @@
-<%= setup_context(:title => I18n.t("preference.global")) %>
+<%
+  if params['global']
+    if params['repo']
+      title = I18n.t('preference.global')
+      message = I18n.t('preference.global_message')
+    else
+      title = I18n.t('preference.user_global')
+      message = I18n.t('preference.user_global_message')
+    end
+  else
+    if params['repo']
+      title = I18n.t('preference.repo')
+      message = I18n.t('preference.repo_message')
+    else
+      title = I18n.t('preference.user_repo')
+      message = I18n.t('preference.user_repo_message')
+    end
+    title += " -- #{current_repo['repo_code']}"
+  end
+%>
+ 
+<%= setup_context(:title => title) %>
 
 <%= form_for @preference, :as => "preference", :url => {:action => :update, :id => @preference.id}, :html => {:class => 'form-horizontal aspace-record-form'}.merge(update_monitor_params(@preference)) do |f| %>
 
 <% if params['global'] %>
   <input type="hidden" name="global" value="true">
+<% end %>
+
+<% if params['repo'] %>
+  <input type="hidden" name="repo" value="true">
 <% end %>
 
 <%= form_context :preference, @preference do |form| %>
@@ -14,11 +39,10 @@
   <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-    <% if params['global'] %>
-         <h2><%= I18n.t("preference.global") %></h2>
-    <% else %>
-         <h2><%= I18n.t("preference.repo") %> -- <%= current_repo['repo_code'] %></h2>
-    <% end %>
+      <h2><%= title %></h2>
+      <div class="alert alert-info">
+        <%= message.force_encoding("UTF-8") %>
+      </div>
 
          <%= render :partial => "shared/flash_messages" %>
 
