--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -33,7 +33,15 @@
         <%= form.label_and_select "level", form.possible_options_for("level", true) %>
         <%= form.label_and_textfield "other_level", :required => true %>
         <%= form.label_and_select "language", form.possible_options_for("language", true) %>
-        <%= form.label_and_boolean "publish", {}, user_prefs["publish"] %>
+        <div class="control-group">
+          <%= form.label "publish" %>
+          <div class="controls">
+            <%= form.checkbox "publish", {}, user_prefs["publish"] %>
+            <% if form.obj["has_unpublished_ancestor"] %>
+              <span class="help-inline"><span class="text-info"><%= I18n.t("archival_object._frontend.messages.has_unpublished_ancestor") %></span></span>
+            <% end %>
+          </div>
+        </div>
         <%= form.label_and_boolean "restrictions_apply", {}, form.default_for("restrictions_apply") %>
         <%= form.label_and_textarea "repository_processing_note" %>
       </fieldset>
