--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -17,6 +17,7 @@
           <%= readonly.label_and_textfield "other_level" %>
           <%= readonly.label_and_select "language", readonly.possible_options_for("language", true) %>
           <%= readonly.label_and_boolean "publish" %>
+          <%= readonly.label_and_boolean "has_unpublished_ancestor" %>
           <%= readonly.label_and_boolean "restrictions_apply" %>
           <%= readonly.label_and_textarea "repository_processing_note" %>
           <%= display_audit_info(@archival_object) %>
