--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -23,7 +23,15 @@
       <%= form.label_and_textfield "label", :required => :conditionally %>
       <%= form.label_and_textarea "title", :required => :conditionally %>
       <%= form.label_and_textfield "component_id" %>
-      <%= form.label_and_boolean "publish", {}, user_prefs["publish"] %>
+      <div class="control-group">
+        <%= form.label "publish" %>
+        <div class="controls">
+          <%= form.checkbox "publish", {}, user_prefs["publish"] %>
+          <% if form.obj["has_unpublished_ancestor"] %>
+            <span class="help-inline"><span class="text-info"><%= I18n.t("digital_object_component._frontend.messages.has_unpublished_ancestor") %></span></span>
+          <% end %>
+        </div>
+      </div>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
 
     </section>
