--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -17,6 +17,7 @@
           <%= readonly.label_and_textarea "title" %>
           <%= readonly.label_and_textfield "component_id" %>
           <%= readonly.label_and_boolean "publish" %>
+          <%= readonly.label_and_boolean "has_unpublished_ancestor" %>
           <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
 
         </section>
