create an options popover for download_ead menu item

--- a/frontend/app/assets/javascripts/resources.show.js.erb
+++ b/frontend/app/assets/javascripts/resources.show.js.erb
@@ -2,6 +2,7 @@
 //= require merge_dropdown
 //= require transfer_dropdown
 //= require add_event_dropdown
+//= require export_dropdown
 
 $(function() {
 
