--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -13,6 +13,7 @@
 //= require merge_dropdown
 //= require transfer_dropdown
 //= require add_event_dropdown
+//= require export_dropdown
 
 $(function() {
   $.fn.init_resource_form = function() {
