--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -2,7 +2,9 @@
 
 <%
    @show_multiselect_column = user_can?("delete_archival_record")
-   add_column(I18n.t("accession.identifier"), proc {|record| record['identifier']}, :sortable => true, :sort_by => "identifier")
+   @title_column_header = user_prefs["accession_browse_label_title"]
+   id_label = user_prefs["accession_browse_label_identifier"] || I18n.t("accession.identifier")
+   add_column(id_label, proc {|record| record['identifier']}, :sortable => true, :sort_by => "identifier")
 %>
 
 <div class="row-fluid">
