WIP: strings and rubber bands - configurable browse for accessions

--- a/frontend/app/views/defaults/_template.html.erb
+++ b/frontend/app/views/defaults/_template.html.erb
@@ -4,6 +4,14 @@
       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
       <%= form.label_and_textfield("accession_browse_label_title") %>
       <%= form.label_and_textfield("accession_browse_label_identifier") %>
+
+      <h3><%= I18n.t "defaults.accession_browse_section" %></h3>
+      <%= form.label_and_select "accession_browse_column_1", form.possible_options_for("accession_browse_column_1", true) %>
+      <%= form.label_and_select "accession_browse_column_2", form.possible_options_for("accession_browse_column_2", true) %>
+      <%= form.label_and_select "accession_browse_column_3", form.possible_options_for("accession_browse_column_3", true) %>
+      <%= form.label_and_select "accession_browse_column_4", form.possible_options_for("accession_browse_column_4", true) %>
+      <%= form.label_and_select "accession_browse_column_5", form.possible_options_for("accession_browse_column_5", true) %>
+
       <%= form.hidden_input "junk", "bin me please" %>
    </div>
 <% end %>
