--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -4,7 +4,17 @@
    @show_multiselect_column = user_can?("delete_archival_record")
    @title_column_header = user_prefs["accession_browse_label_title"]
    id_label = user_prefs["accession_browse_label_identifier"] || I18n.t("accession.identifier")
-   add_column(id_label, proc {|record| record['identifier']}, :sortable => true, :sort_by => "identifier")
+
+   (1..5).to_a.each do |n|
+     prop = user_prefs["accession_browse_column_#{n}"]
+     if prop
+       add_column(I18n.t("accession.#{prop}"),
+                  proc { |record|
+                    v = record[prop] || ASUtils.json_parse(record['json'])[prop]
+                    I18n.t("enumerations.accession_#{prop}.#{v}", :default => v.to_s)
+                  }, :sortable => true, :sort_by => prop)
+     end
+   end
 %>
 
 <div class="row-fluid">
