--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -2,7 +2,9 @@
 
 <%
    @show_multiselect_column = user_can?("delete_archival_record")
-   add_column(I18n.t("resource.identifier"), proc {|record| record['identifier']}, :sortable => true, :sort_by => "identifier")
+
+   add_browse_columns("resource", {"level" => "archival_record_level", "language" => "language_iso639_2"})
+
 %>
 
 <div class="row-fluid">
