--- a/frontend/app/views/defaults/_template.html.erb
+++ b/frontend/app/views/defaults/_template.html.erb
@@ -1,55 +1,43 @@
+<% def_msg = I18n.t("defaults.accept_default_message") %>
 <% define_template("defaults", jsonmodel_definition(:defaults)) do |form| %>
   <div class="subrecord-form-fields">
-
       <h3><%= I18n.t "defaults.general_section" %></h3>
       <%= form.label_and_boolean "show_suppressed", {}, form.default_for("show_suppressed") %>
       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
 
       <h3><%= I18n.t "defaults.accession_browse_section" %></h3>
-      <%= form.label_and_select("accession_browse_column_1",
-                                form.possible_options_for("accession_browse_column_1",
-                                                          true,
-                                                          {:i18n_prefix => "accession"})) %>
-      <%= form.label_and_select("accession_browse_column_2",
-                                form.possible_options_for("accession_browse_column_2",
-                                                          true,
-                                                          {:i18n_prefix => "accession"})) %>
-      <%= form.label_and_select("accession_browse_column_3",
-                                form.possible_options_for("accession_browse_column_3",
-                                                          true,
-                                                          {:i18n_prefix => "accession"})) %>
-      <%= form.label_and_select("accession_browse_column_4",
-                                form.possible_options_for("accession_browse_column_4",
-                                                          true,
-                                                          {:i18n_prefix => "accession"})) %>
-      <%= form.label_and_select("accession_browse_column_5",
-                                form.possible_options_for("accession_browse_column_5",
-                                                          true,
-                                                          {:i18n_prefix => "accession"})) %>
 
+      <%=
+        out = ''
+        (1..5).to_a.each do |n|
+          out += form.label_and_select("accession_browse_column_#{n}",
+                                       form.possible_options_for("accession_browse_column_#{n}", true,
+                                                                 {:i18n_prefix => "accession",
+                                                                  :empty_label => "#{def_msg} " +
+                                                                    (@inherited_defaults["accession_browse_column_#{n}"] ?
+                                                                       I18n.t("accession." +
+                                                                         @inherited_defaults["accession_browse_column_#{n}"]) :
+                                                                       I18n.t("defaults.no_value"))}))
+        end
+        out.html_safe
+      %>
 
       <h3><%= I18n.t "defaults.resource_browse_section" %></h3>
-      <%= form.label_and_select("resource_browse_column_1",
-                                form.possible_options_for("resource_browse_column_1",
-                                                          true,
-                                                          {:i18n_prefix => "resource"})) %>
-      <%= form.label_and_select("resource_browse_column_2",
-                                form.possible_options_for("resource_browse_column_2",
-                                                          true,
-                                                          {:i18n_prefix => "resource"})) %>
-      <%= form.label_and_select("resource_browse_column_3",
-                                form.possible_options_for("resource_browse_column_3",
-                                                          true,
-                                                          {:i18n_prefix => "resource"})) %>
-      <%= form.label_and_select("resource_browse_column_4",
-                                form.possible_options_for("resource_browse_column_4",
-                                                          true,
-                                                          {:i18n_prefix => "resource"})) %>
-      <%= form.label_and_select("resource_browse_column_5",
-                                form.possible_options_for("resource_browse_column_5",
-                                                          true,
-                                                          {:i18n_prefix => "resource"})) %>
 
+      <%=
+        out = ''
+        (1..5).to_a.each do |n|
+          out += form.label_and_select("resource_browse_column_#{n}",
+                                       form.possible_options_for("resource_browse_column_#{n}", true,
+                                                                 {:i18n_prefix => "resource",
+                                                                  :empty_label => "#{def_msg} " +
+                                                                    (@inherited_defaults["resource_browse_column_#{n}"] ?
+                                                                       I18n.t("resource." +
+                                                                         @inherited_defaults["resource_browse_column_#{n}"]) :
+                                                                       I18n.t("defaults.no_value"))}))
+        end
+        out.html_safe
+      %>
 
       <%= form.hidden_input "junk", "bin me please" %>
    </div>
