--- a/frontend/app/views/defaults/_template.html.erb
+++ b/frontend/app/views/defaults/_template.html.erb
@@ -6,7 +6,6 @@
       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
 
       <h3><%= I18n.t "defaults.accession_browse_section" %></h3>
-
       <%=
         out = ''
         (1..5).to_a.each do |n|
@@ -24,7 +23,6 @@
       %>
 
       <h3><%= I18n.t "defaults.resource_browse_section" %></h3>
-
       <%=
         out = ''
         (1..5).to_a.each do |n|
@@ -35,6 +33,22 @@
                                                                     (@inherited_defaults["resource_browse_column_#{n}"] ?
                                                                        I18n.t("resource." +
                                                                          @inherited_defaults["resource_browse_column_#{n}"]) :
+                                                                       I18n.t("defaults.no_value"))}))
+        end
+        out.html_safe
+      %>
+
+      <h3><%= I18n.t "defaults.digital_object_browse_section" %></h3>
+      <%=
+        out = ''
+        (1..5).to_a.each do |n|
+          out += form.label_and_select("digital_object_browse_column_#{n}",
+                                       form.possible_options_for("digital_object_browse_column_#{n}", true,
+                                                                 {:i18n_prefix => "digital_object",
+                                                                  :empty_label => "#{def_msg} " +
+                                                                    (@inherited_defaults["digital_object_browse_column_#{n}"] ?
+                                                                       I18n.t("digital_object." +
+                                                                         @inherited_defaults["digital_object_browse_column_#{n}"]) :
                                                                        I18n.t("defaults.no_value"))}))
         end
         out.html_safe
