Fix error when viewing digital object read only template when there is a linked instance

--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -55,7 +55,7 @@
                   <div class="span9 token-list">
                     <% digital_object.linked_instances.each do | ref | %>
                       <%= render_token :object => ref,
-                                       :label => ref["_resolved"]["title"],
+                                       :label => ref["_resolved"]["display_string"] || ref["_resolved"]["title"],
                                        :type => ref["_resolved"]["jsonmodel_type"],
                                        :uri => ref["ref"] %>
                     <% end %>
