--- a/public/app/views/records/archival_object.html.erb
+++ b/public/app/views/records/archival_object.html.erb
@@ -19,7 +19,7 @@
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
                      {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
-                     {:property => 'instances', :subrecord_type => 'instance', :anchor => 'instances'},
+                     {:property => 'published_instances', :subrecord_type => 'instance', :anchor => 'instances'},
                      {:anchor => 'components', :label => I18n.t("archival_object._public.section.components")}
                    ]
                  })
