--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -20,7 +20,7 @@
                      {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                      {:property => 'published_related_accessions', :subrecord_type => 'accession', :anchor => 'accessions'},
-                     {:property => 'instances', :subrecord_type => 'instance', :anchor => 'instances'},
+                     {:property => 'published_instances', :subrecord_type => 'instance', :anchor => 'instances'},
                      {:anchor => 'components', :label => I18n.t("resource._public.section.components")}
                    ]
                  })
@@ -59,7 +59,7 @@
         <%= render_aspace_partial :partial => "notes", :locals => {:notes => @resource.published_notes} %>
         <%= render_aspace_partial :partial => "external_documents", :locals => {:external_documents => @resource.published_external_documents} %>
         <%= render_aspace_partial :partial => "accessions", :locals => {:accessions => @resource.published_related_accessions} %>
-        <%= render_aspace_partial :partial => "instances", :locals => {:instances => @resource.instances} %>
+        <%= render_aspace_partial :partial => "instances", :locals => {:instances => @resource.published_instances} %>
         <%= render_aspace_partial :partial => "components", :locals => {
               :record_type => "resource",
               :root_uri => @resource.uri,
