--- a/public/app/views/records/_navlist.html.erb
+++ b/public/app/views/records/_navlist.html.erb
@@ -4,12 +4,12 @@
 
     <% entries.each do |entry| %>
       <% if entry[:property] %>
-        <% unless record[entry[:property]].blank? || (entry[:count] && entry[:count] == 0) %>
+        <% unless record[entry[:property]].blank? %>
           <li>
             <a href="#<%= entry[:anchor] %>">
               <%= I18n.t("#{entry[:subrecord_type]}._plural") %>
               <span class="badge badge-info">
-                <%= entry[:count] || record[entry[:property]].length
+                <%= record[entry[:property]].length
                 %></span><span class="icon-chevron-right"></span>
             </a>
           </li>
