--- a/public/app/views/records/_file_versions.html.erb
+++ b/public/app/views/records/_file_versions.html.erb
@@ -6,10 +6,10 @@
         <li class="result">
           <% if file.embed %>
             <%= render_aspace_partial :partial => "file_version_embed/#{file.embed_type}", :locals => {:file => file} %>
-          <% elsif  file.uri.scheme.match /^http/ %>
+          <% elsif  file.uri && file.uri.scheme.match(/^http/) %>
             <%= link_to file.uri.to_s, file.uri.to_s %>
           <% else %>
-            <%= file.uri %>
+            <%= file['file_uri'] %>
           <% end %>
         </li>
       <% end %>
