--- a/public/app/views/site/_footer.html.erb
+++ b/public/app/views/site/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container footer">
   <div class="row-fluid">
     <div class="span12">
-             <p>Visit <a href="http://archivesspace.org">ArchivesSpace.org</a> | <%= ASConstants.VERSION %></p>
+             <p><% if AppConfig[:enable_frontend] %>View <a href="<%= AppConfig[:frontend_proxy_url] %>">Staff Interface</a> | <% end %>Visit <a href="http://archivesspace.org">ArchivesSpace.org</a> | <%= ASConstants.VERSION %></p>
     </div>
   </div>
 </div>
