--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -11,6 +11,19 @@
   </div>
 <% end %>
 
+<% define_template "date_type_range", jsonmodel_definition(:date) do |form| %>
+  <div class="inline-subform date-type-subform" data-date-type="range">
+    <%= form.label_and_date "begin" %>
+    <%= form.label_and_date "end" %>
+  </div>
+<% end %>
+
+<% define_template "date_type_bulk", jsonmodel_definition(:date) do |form| %>
+  <div class="inline-subform date-type-subform" data-date-type="bulk">
+    <%= form.label_and_date "begin" %>
+    <%= form.label_and_date "end" %>
+  </div>
+<% end %>
 
 <% define_template "date_type_nil", jsonmodel_definition(:date) do %>
   <div class="inline-subform date-type-subform">
@@ -27,7 +40,7 @@
     <div class="date-container">
       <%= form.label_and_select "label", form.possible_options_for("label", false, :include => ["existence"]) %>
       <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
-			<%= form.label_and_select "date_type", form.possible_options_for("date_type", true ), :required => true %>
+			<%= form.label_and_select "date_type", form.possible_options_for("date_type", true, :exclude => ["bulk", "inclusive"]), :required => true %>
       <%form.emit_template("date_fields") %>
     </div>
   </div>
@@ -39,7 +52,7 @@
     <div class="date-container">
       <%= form.label_and_select "label", form.possible_options_for("label", false, :include => ["usage"]) %>
       <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
-			<%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => true %>
+			<%= form.label_and_select "date_type", form.possible_options_for("date_type", true, :exclude => ["bulk", "inclusive"]), :required => true %>
       <%form.emit_template("date_fields") %>
     </div>
   </div>
@@ -51,7 +64,7 @@
     <div class="date-container">
       <%= form.label_and_select "label", form.possible_options_for("label"), :field_opts => {:default => "creation"} %>
 			<%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
-      <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => true %>
+			<%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => true %>
       <%form.emit_template("date_fields") %>
     </div>
   </div>
@@ -63,7 +76,7 @@
     <div class="date-container">
       <%= form.label_and_select "label", form.possible_options_for("label") %>
       <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
-      <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => true %>
+			<%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => true %>
       <%form.emit_template("date_fields") %>
     </div>
   </div>
